--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,6 +19,6 @@ ul {
 
 .answerList {
     display: flex;
-    justify-content: space-between;
-    align-content: space-between;
+    flex-direction: column;
+  
 }
