--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <header>
 <div class="mainarea">
-    <a routerLink="" class="title">{{appTitle}}</a>
+    <h1 class="title">{{appTitle}}</h1>
 </div>
 </header>
