--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,8 +4,8 @@
 <ul *ngIf="results">
     <li *ngFor="let result of results.results" class="questions">
         <h2> {{result.question}}</h2>
-        <p> {{ result.correct_answer }}</p>
-        <p class="answerList" (onLoad)="someMethod()">{{ result.incorrect_answers }}</p>
+        <input type="radio"/><p> {{ result.correct_answer }}</p>
+        <p class="answerList">{{ result.incorrect_answers }}</p>
     </li>
 </ul>
 
