--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,3 @@
-.blue {
-    color: pink;
-}
 
 .questions {
     list-style: none;
@@ -12,13 +9,32 @@ ul {
     margin: 4em;
 }
 
-.result {
-    display: none;
-    font-size: 26px;
+.specificRadio {
+    margin-top: 2em;
+    margin-right: 2em;
 }
 
-.answerList {
+.questionValues {
     display: flex;
-    flex-direction: column;
-  
+    justify-content: flex-start;
+    flex-direction: row;
+}
+
+#instructions {
+    text-align: center;
+    margin-top: 3em;
+}
+
+.answerSection {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+button {
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    margin: 0 3em;
+    padding: 0.5em;
 }
