--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,5 +13,5 @@
 <section class="answerSection">
 <button (click)="countAnswers()"> Show my results </button>
 <h2 Id="finalResults"></h2> 
-<button (click)="resetTrivia()"> Play Again?</button>
+<button (click)="resetTrivia()" Id="resetButton"> Play Again?</button>
 </section>
