--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -9,7 +9,7 @@ header {
 .title {
     font-weight: bold;
     font-size: 22px;
-    margin: 2rem;
+    margin: 1rem 0 0 7rem;
     padding: 1rem;
 }
 
